# PowerTrack-SDK-API

./: .gitignore  Project requirements.md  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/models/: README.md  __init__.py  exercise.py  plan_exercise.py  session_log.py  training_plan.py  user.py  workout_day.py
backend/app/routes/: README.md  exercises.py  plan_exercises.py  plans.py  session_logs.py  stats.py  users.py  workout_days.py
backend/app/schemas/: README.md  __init__.py  exercise.py  plan_exercise.py  session_log.py  stats.py  training_plan.py  workout_day.py
backend/app/services/: README.md  exercise_service.py  intensity.py  personal_bests.py  plan_exercise_service.py  plan_service.py  recovery.py  session_log_service.py  user_service.py  volume.py  workout_day_service.py
backend/tests/: README.md  conftest.py  test_exercises.py  test_plan_exercises.py  test_plans.py  test_session_logs.py  test_stats.py  test_users.py  test_workout_days.py
client/: API_REFERENCE.md  README.md  pyproject.toml
client/src/client/: __init__.py  base.py  client.py  exceptions.py
client/src/client/models/: README.md  __init__.py  day.py  exercise.py  plan.py  plan_exercise.py  session_log.py  stats_reports.py  user.py
client/src/client/plots/: README.md  __init__.py  base.py  intensity.py  recovery.py  volume.py
client/src/client/resources/: README.md  __init__.py  exercises.py  plan_exercises.py  plans.py  session_logs.py  stats.py  users.py  workout_days.py
client/tests/: README.md  conftest.py  test_active_record.py  test_base.py  test_exercises.py  test_plan_exercises.py  test_plans.py  test_plots.py  test_session_logs.py  test_stats.py  test_users.py  test_workout_days.py
demo/: README.md  demo.py  example_usage.ipynb  pyproject.toml  pyproject.toml.backup
demo/.ipynb_checkpoints/: example_usage-checkpoint.ipynb
