[project]
name = "backend"
version = "0.1.0"
description = "backend_PowerTrack"
readme = "README.md"
authors = [
    { name = "Mattia Loi", email = "mattia.loi@student.supsi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.3",
    "colorama==0.4.6",
    "flask==3.1.3",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.5.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "marshmallow==3.21.1",
    "pytest==8.1.1",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.8",
]

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]