[project]
name = "backend"
version = "0.1.0"
description = "backend_PowerTrack"
readme = "README.md"
authors = [
    { name = "Mattia Loi", email = "mattia.loi@student.supsi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.3",
    "flask-sqlalchemy==3.1.1",
    "marshmallow==3.21.1",
    "pytest==8.1.1"
]

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]