[project]
name = "client"
version = "0.1.0"
description = "PowerTrack Client Library"
readme = "README.md"
authors = [
    { name = "Mattia Loi", email = "mattia.loi@student.supsi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "idna==3.13",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "packaging==26.2",
    "pillow==12.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.33.1",
    "six==1.17.0",
    "urllib3==2.7.0",
]

[dependency-groups]
dev = ["pytest>=8.1.1"]

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]