[project]
name = "client"
version = "0.1.0"
description = "PowerTrack Client Library"
readme = "README.md"
authors = [
    { name = "Mattia Loi", email = "mattia.loi@student.supsi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.9",
    "requests==2.33.1"
]

[dependency-groups]
dev = ["pytest>=8.1.1"]

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]