[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mattia Loi", email = "mattia.loi@student.supsi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "client",
    "ipykernel==7.2.0",
    "notebook==7.5.6",
    "nbformat==5.10.4",
    "matplotlib-inline==0.2.1",
]

[tool.uv]
package = false

[tool.uv.sources]
client = { path = "../client" }
